<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:viewBindingIgnore="false">

    <CheckBox
        android:id="@+id/checkbox_terms_approved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:background="@drawable/cb_selector"
        android:button="@null"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <ScrollView
        android:scrollbars="vertical"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lly_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkbox_terms_approved"
        app:layout_constraintTop_toTopOf="@+id/checkbox_terms_approved"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_terms"
            android:theme="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/gmsansui_regular"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/default_terms"
            android:textColor="@color/text_color" />
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:id="@+id/lly_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scrollView2">

        <Button
            android:id="@+id/btn_purchase"
            android:theme="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mybrand_10_2_purchase_csm"
            android:background="@drawable/btn_selector"
            android:textSize="@dimen/text_size_large"
            android:layout_marginRight="20dp"
            android:textAllCaps="false"
            android:fontFamily="@font/gmsansui_regular"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/btn_view_terms"
            android:theme="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mybrand_9_13_viewTerms_csm"
            android:background="@drawable/btn_view_terms_normal"
            android:textSize="@dimen/text_size_large"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:fontFamily="@font/gmsansui_regular"
            android:textColor="?attr/text_color" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>