<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert_main_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/guideline1_margin_end"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="548dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        android:layout_width="0dp"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_icn_visa"
        android:contentDescription="@string/credit_card_description"
        android:cropToPadding="false"
        android:foreground="@drawable/ic_icn_visa"
        android:paddingLeft="-30dp"
        android:paddingRight="-20dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icn_visa"
        tools:srcCompat="@drawable/ic_icn_visa"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_16dp"
        android:fontFamily="@font/gmsansui_regular"
        android:text="@string/test_phone"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@+id/img_credit_card"
        app:layout_constraintStart_toEndOf="@+id/img_credit_card"
        app:layout_constraintTop_toTopOf="@+id/img_credit_card"
        tools:text="@string/test_phone"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintTop_toBottomOf="@+id/tv_credit_card" />

    <TextView
        android:id="@+id/tv_subtotal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gmsansui_regular"
        android:text="@string/mybrand_10_2_subtotal_csm"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_taxes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gmsansui_regular"
        android:text="@string/mybrand_10_2_taxesFees_csm"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtotal_label"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_discount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gmsansui_regular"
        android:text="@string/mybrand_10_2_credit_csm"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_taxes_label"
        tools:visibility="visible" />

    <View
        android:id="@+id/divider5"
        style="@style/Divider"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintTop_toBottomOf="@+id/tv_promotion_label" />

    <TextView
        android:id="@+id/tv_total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gmsansui_regular"
        android:text="@string/mybrand_10_2_total_csm"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_info"
        android:theme="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/gmsansui_regular"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_label"
        android:textColor="@color/text_color"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_20dp"
        android:layout_marginEnd="@dimen/layout_margin_1441dp"
        android:layout_marginBottom="@dimen/layout_margin_937dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="599dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmsansui_regular"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal_label"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tv_subtotal_label"
        tools:text="$24.95/month"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_taxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmsansui_regular"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_taxes_label"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tv_taxes_label"
        tools:text="$4.91/month"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmsansui_regular"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_discount_label"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tv_discount_label"
        tools:text="-$5.00/month"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_promotion_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/monthly_plans_detail"
        android:textColor="@color/text_color"
        android:theme="@style/AppTheme"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/img_credit_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_discount_label"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gmsansui_regular"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_medium"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total_label"
        app:layout_constraintEnd_toStartOf="@+id/vert_main_divide"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="@+id/tv_total_label"
        tools:text="$25.04/month"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>